@@ -36,6 +36,17 @@ SCIP_RETCODE SCIPincludePropPseudoobj(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
+/** propagates the cutoff bound for the given variables */
+extern
+SCIP_RETCODE SCIPpropagateCutoffboundVar(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_PROP*            prop,               /**< propagator, or NULL */
+   SCIP_VAR*             var,                /**< variables to propagate */
+   SCIP_Real             cutoffbound,        /**< cutoff bound to use */
+   SCIP_Real             pseudoobjval,       /**< pseudo objective value to use */
+   int*                  nchgbds             /**< pointer to store the number of changed bounds */
+   );
+
 #ifdef __cplusplus
 }
 #endif
